[package]
name = "cccp"
version = "0.0.1"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
libspm-rs = { version = "0.0.3", git = "https://github.com/Soviet-Linux/LibSPM-rs.git" }

[profile.release]
lto = true
debug = false
codegen-units = 1
opt-level = 3
debug-assertions = false
strip = true
